# regatta-tracker-interpolation-research

./: .gitignore  README.md  pyproject.toml
data/processed/: 2025-09-28_10-31__2025-09-28_10:31.npz  2025-10-04_10-17__2025-10-04_10:17.npz  2025-10-05_10-20__2025-10-05_10:20.npz  2025-10-12_10-46__2025-10-12_10:46.npz  gin-sul-rund-hanskalbsand-2024-yury__Gin_Sul_Rund_Hanskalbsand_2024.npz  hamburg-elbe-alex__Hamburg_Segeln.npz  hamburg-elbe-richard__Hamburg_Segeln.npz  hamburg-elbe-track2__Hamburg_Sailing.npz  hamburg-elbe-track3__Hamburg_Segeln.npz  ottawa-2016-05-25__0.npz  ottawa-2016-06-05__0.npz  ottawa-2016-08-24__0.npz
data/raw/: 2025-09-28_10-31.gpx  2025-10-04_10-17.gpx  2025-10-05_10-20.gpx  2025-10-12_10-46.gpx  SOURCES.md
notebooks/: 01_data_exploration.ipynb  02_methods_demo.ipynb  03_accuracy_experiment.ipynb  04_performance_experiment.ipynb  05_results_summary.ipynb
results/tables/: accuracy_raw.csv  table_03_accuracy.csv  table_03_full.csv
src/interp_research/: __init__.py  benchmark.py  geo.py  holdout.py  metrics.py  numeric.py  parser.py  plotting.py
src/interp_research/methods/: __init__.py  b_spline.py  cubic_spline.py  hermite.py  lagrange.py  linear.py
tests/: test_benchmark.py  test_geo.py  test_holdout.py  test_methods.py  test_metrics.py  test_parser.py
